# lerobot2mcap

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
lerobot2mcap/: __init__.py
